--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0|^8.1",
-        "bfg/admin": "^5.5.1",
+        "bfg/admin": "^5.5.1|^6.0",
         "owen-it/laravel-auditing": "^12.0|^13.0",
         "bfg/attributes": "1.2.4"
     },
